<resources>
    <string name="app_name" translatable="false">Physiotherapy</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="telefon_numaras">Telefon Numarası</string>
    <string name="soyisim">Soyisim</string>
    <string name="sim">İsim</string>
    <string name="kay_t_ol">Kayıt ol</string>
    <string name="giri_yap">Giriş yap</string>
    <string name="password">password</string>
    <string name="username">userName</string>
    <string name="renciler">Öğrenciler</string>
    <string name="profil">Profil</string>
    <string name="hint_password" translatable="false">*****</string>
    <string name="forget_password">Şifreyi Unuttum</string>
    <string name="student_delete_icon" translatable="false">öğrenci silme simgesi</string>
    <string name="renci_ekle">Öğrenci ekle</string>
    <string name="nceki_sayfa">Önceki Sayfa</string>
    <string name="ifre">Şifre</string>
    <string name="kullan_c_ad">Kullanıcı adı</string>
    <string name="g_revler">Görevler</string>
    <string name="notlar">Notlar</string>
    <string name="home">Anasayfa</string>
    <string name="students">Öğrenciler</string>
    <string name="profile">Profil</string>
    <string name="is_user_loggin">kullanıcı giriş yaptı mı</string>
    <string name="is_user_loggin_default_false" translatable="false">kullanıcı oturum açma varsayılanda yanlış mı</string>
    <string name="add_new_task">Yeni Görev Ekle</string>
    <string name="add_new_note">Yeni Not Ekle</string>
    <string name="add_new_student">Yeni Öğrenci Ekle</string>
    <string name="hint_add_todo">Yapılacak öğesi ekle</string>
    <string name="hint_add_note">Not ekle</string>
    <string name="save">kaydet</string>
    <string name="email_password_cant_empty">Email veya şifre boş bırakılamaz</string>
    <string name="log_out">Çıkış yap</string>
    <string name="register_failed">"Kayıt olurken hata oluştu. Lütfen tekrar deneyiniz"</string>
    <string name="userphone">UserPhone</string>
    <string name="user_surname">User Surname</string>
    <string name="user_password">User Password</string>
    <string name="user_mail">User Mail</string>
    <string name="edit">Edit</string>
    <string name="email">email</string>
    <string name="cancel">Cancel</string>
    <string name="forgot_password">forgot password</string>
    <string name="student_name">Student Name</string>
    <string name="identify_number">Identify Number</string>
    <string name="request_canceled">request canceled</string>
</resources>