<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RegisterFragment">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_et_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="50dp"
            android:padding="20dp"
            android:text="@string/sim"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_et_last_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textStyle="bold|italic"
            android:layout_marginEnd="50dp"
            android:padding="20dp"
            android:text="@string/soyisim"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/register_et_name" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_et_phone_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:padding="20dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textStyle="bold|italic"
            android:text="@string/telefon_numaras"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/register_et_last_name" />
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_et_user_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:padding="20dp"
            android:text="@string/kullan_c_ad"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/register_et_phone_number" />
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_et_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:padding="20dp"
            android:text="@string/ifre"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textStyle="bold|italic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/register_et_user_name" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/register_btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nceki_sayfa"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintStart_toStartOf="@id/register_et_phone_number"
            app:layout_constraintTop_toBottomOf="@id/register_et_password" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/register_btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="register_btn"
            android:text="@string/kay_t_ol"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintEnd_toEndOf="@id/register_et_phone_number"
            app:layout_constraintTop_toBottomOf="@id/register_et_password" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>