<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout5"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.profile.ProfileFragment">


        <TextView
            android:id="@+id/tv_userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="9sp"
            android:text="@string/username"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:textStyle="italic"
            app:layout_constraintBottom_toTopOf="@id/tv_userSurname"
            app:layout_constraintStart_toEndOf="@id/iv_name"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_edit_name"
            app:layout_constraintTop_toTopOf="@id/tv_userName"
            app:layout_constraintBottom_toBottomOf="@id/tv_userName"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:text="@string/edit"
            android:textColor="@color/colorPrimaryDark"
            android:background="@color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/iv_name"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/idcard"
            app:layout_constraintBottom_toBottomOf="@id/tv_userName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_userName" />

        <View
            android:id="@+id/view01"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="#BABABA"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_userName" />


        <TextView
            android:id="@+id/tv_userSurname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="9sp"
            android:text="@string/user_surname"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:textStyle="italic"
            app:layout_constraintBottom_toTopOf="@id/tv_userPhone"
            app:layout_constraintStart_toEndOf="@id/iv_surname"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@id/tv_userName" />

        <Button
            android:id="@+id/btn_edit_surname"
            app:layout_constraintTop_toTopOf="@id/tv_userSurname"
            app:layout_constraintBottom_toBottomOf="@id/tv_userSurname"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:text="@string/edit"
            android:textColor="@color/colorPrimaryDark"
            android:background="@color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/iv_surname"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/idcard"
            app:layout_constraintBottom_toBottomOf="@id/tv_userSurname"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_userSurname" />

        <View
            android:id="@+id/view02"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="#BABABA"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_userSurname" />

        <TextView
            android:id="@+id/tv_userPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="9sp"
            android:text="@string/userphone"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:textStyle="italic"
            app:layout_constraintBottom_toTopOf="@id/tv_userMail"
            app:layout_constraintStart_toEndOf="@id/iv_phone"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@id/tv_userSurname" />

        <Button
            android:id="@+id/btn_edit_userPhone"
            app:layout_constraintTop_toTopOf="@id/tv_userPhone"
            app:layout_constraintBottom_toBottomOf="@id/tv_userPhone"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:text="@string/edit"
            android:textColor="@color/colorPrimaryDark"
            android:background="@color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/iv_phone"
            android:layout_width="40dp"
            android:layout_height="35dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/smartphone"
            app:layout_constraintBottom_toBottomOf="@id/tv_userPhone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_userPhone" />

        <View
            android:id="@+id/view03"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="#BABABA"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_userPhone" />

        <TextView
            android:id="@+id/tv_userMail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="9sp"
            android:text="@string/user_mail"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:textStyle="italic"
            app:layout_constraintBottom_toTopOf="@id/tv_userPassword"
            app:layout_constraintStart_toEndOf="@id/iv_mail"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@id/tv_userPhone" />

        <Button
            android:id="@+id/btn_edit_mail"
            app:layout_constraintTop_toTopOf="@id/tv_userMail"
            app:layout_constraintBottom_toBottomOf="@id/tv_userMail"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:text="@string/edit"
            android:textColor="@color/colorPrimaryDark"
            android:background="@color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/iv_mail"
            android:layout_width="40dp"
            android:layout_height="35dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/mailsend"
            app:layout_constraintBottom_toBottomOf="@id/tv_userMail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_userMail" />


        <View
            android:id="@+id/view04"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="#BABABA"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_userMail" />

        <TextView
            android:id="@+id/tv_userPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="9sp"
            android:text="@string/user_password"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:textStyle="italic"
            app:layout_constraintStart_toEndOf="@id/iv_password"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@id/tv_userMail" />

        <Button
            android:id="@+id/btn_edit_password"
            app:layout_constraintTop_toTopOf="@id/tv_userPassword"
            app:layout_constraintBottom_toBottomOf="@id/tv_userPassword"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:text="@string/edit"
            android:textColor="@color/colorPrimaryDark"
            android:background="@color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/iv_password"
            android:layout_width="40dp"
            android:layout_height="35dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/padlock"
            app:layout_constraintBottom_toBottomOf="@id/tv_userPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_userPassword" />

        <View
            android:id="@+id/view05"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="#BABABA"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_userPassword" />

        <Button
            android:id="@+id/profile_btn_log_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp"
            android:background="#FFFFFF"
            android:text="@string/log_out"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_userPassword" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>